fix(facts): padding and grid alignment

--- a/themes/wmfoundation/assets/src/sass/css/scss/objects/_facts.scss
+++ b/themes/wmfoundation/assets/src/sass/css/scss/objects/_facts.scss
@@ -101,9 +101,6 @@
   position: relative;
   z-index: 999;
   border: 1px solid $wmui-color-base80;
-}
-
-.fact-inner.w-32p {
   padding: rem(20);
 }
 
